# XTU-EMS-API

./: LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  publish.yml
skills/: SKILLS.md
skills/scripts/: __init__.py  classroom_availability.py  course_schedule.py  ems_auth.py  exam_schedule.py  gpa.py  sso_login.py  student_info.py  teaching_calendar.py  tokenizer.py  transcript.py
